<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/text_home"
        android:layout_width="385dp"
        android:layout_height="54dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/email"
        android:layout_width="370dp"
        android:layout_height="40dp"
        android:text="@string/email"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="156dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/password"
        android:layout_width="365dp"
        android:layout_height="32dp"
        android:text="@string/password"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="216dp"
        tools:ignore="MissingConstraints" />

    <RadioGroup
        android:layout_width="363dp"
        android:layout_height="101dp"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="278dp"
        tools:ignore="MissingConstraints">

        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/female" />

    </RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="205dp"
        android:layout_height="50dp"
        android:text="@string/signup"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="113dp"
        tools:layout_editor_absoluteY="409dp" />

</androidx.constraintlayout.widget.ConstraintLayout>